# sparkles

./: BENCHES.MD  CHANGELOG.md  Cargo.toml  README.md  TODO.md
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
benches/: tracing_bench.rs
examples/: tracing_dense.rs
sparkles/: Cargo.toml  README.md
sparkles-core/: Cargo.toml  README.md  build.rs
sparkles-core/src/: config.rs  consts.rs  headers.rs  lib.rs
sparkles-core/src/local_storage/: id_mapping.rs  mod.rs
sparkles-core/src/sender/: mod.rs
sparkles-core/src/timestamp/: aarch64.rs  cortex_m.rs  instant.rs  mod.rs  std.rs  x86.rs
sparkles-macro/: Cargo.toml
sparkles-macro/src/: lib.rs
sparkles-parser/: Cargo.toml  README.md  build.rs
sparkles-parser/examples/: file-parser.rs  interactive.rs  sparkles-parser.rs
sparkles-parser/src/: consts.rs  decoder.rs  lib.rs  perfetto_format.rs
sparkles-receiver/: Cargo.toml
sparkles-receiver/examples/: listen_and_print.rs
sparkles-receiver/src/: lib.rs  perfetto_format.rs
sparkles/examples/: configuration.rs  how_to_use.rs  lib_puffin_test.rs  lib_tracing_test.rs  puffin_test.rs  timestamp_freq_test.rs  timestamp_tests.rs  tracing_dense.rs  tracing_lib.rs
sparkles/src/: config.rs  encoder.rs  global_storage.rs  id_mapping.rs  lib.rs  thread_local_storage.rs  timestamp.rs
sparkles/src/sender/: file_sender.rs  mod.rs  udp_sender.rs
src/: fifo.rs  granular_buf.rs  lib.rs  main.rs  tracing.rs
src/fifo/: fifo_cnt.rs
src/impl/: mod.rs
trace_acceptor/: Cargo.toml
trace_acceptor/examples/: listen_and_print.rs
trace_acceptor/src/: lib.rs  perfetto_format.rs
trace_collector/: Cargo.toml
trace_collector/benches/: tracing_bench.rs
trace_collector/examples/: tracing_dense.rs
trace_collector/src/: id_mapping.rs  lib.rs  thread_local_storage.rs  timestamp.rs
tracer-macro/: Cargo.toml
tracer-macro/src/: lib.rs
