[package]
name = "tracer"
version = "0.1.0"
edition = "2021"

[dependencies]
log = { version = "0.4.21", default-features = false }
[dev-dependencies]
simple_logger = "5.0.0"

[[bench]]
name="tracing_bench"
required-features = ["std"]

[[example]]
name="tracing_dense"
required-features = ["std"]

[features]
default = ["std"]
std = []