[package]
name = "sparkles-core"
description = "Core crate for sparkles"
version = "0.0.3"
edition = "2021"
license = "MIT"
repository = "https://github.com/skibon02/sparkles"

[dependencies]
cortex-m = {version = "0.7.7", optional = true}


[features]
default = []
accurate-events-x86 = []
cortex-m = ["dep:cortex-m"]