[package]
name = "sparkles-macro"
version = "0.0.2"
edition = "2021"
license = "MIT"
description = "Macro crate for sparkles"
repository = "https://github.com/skibon02/sparkles"


[dependencies]
proc-macro2 = "1.0.86"
quote = "1.0.37"
syn = { version = "2.0.77", features = ["full"] }

[lib]
proc-macro = true