[package]
name = "sparkles-parser"
version = "0.0.3"
edition = "2021"
license = "Apache-2.0"
description = "Parser for sparkles tracing library"
repository = "https://github.com/skibon02/sparkles"

[dependencies]
log = "0.4.22"
lazy_static = "1.5.0"
bincode = "1.3.3"
sparkles-core = { path = "../sparkles-core" }
ringbuf = "0.4.4"
thiserror = "1.0.64"
chrono = "0.4.38"
prost = "0.13.3"
bytes = "1.7.2"
rand = "0.8.5"
simple_logger = "5.0.0"

[build-dependencies]
prost-build = "0.13.3"
protobuf-src = "2.0.1"
