[package]
name = "sparkles-receiver"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.21"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
lazy_static = "1.4.0"
bincode = "1.3.3"
sparkles = { version = "0.1.0", path = "../sparkles" }

[dev-dependencies]
simple_logger = "5.0.0"
ctrlc = "3.4.4"
