[package]
name = "sparkles-receiver"
version = "0.0.2"
edition = "2021"
license = "MIT"

[dependencies]
log = "0.4.22"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
lazy_static = "1.5.0"
bincode = "1.3.3"
sparkles-core = { path = "../sparkles-core" }
ringbuf = "0.4.4"

[dev-dependencies]
simple_logger = "5.0.0"
ctrlc = "3.4.4"
