[package]
name = "sparkles"
description = "Capture execution flow of your Rust application with CPU cycle precision!"
version = "0.0.4"
edition = "2021"
license = "MIT"
repository = "https://github.com/skibon02/sparkles"
readme = "../README.md"

[dependencies]
sparkles-core = {version = "0.0.3", path = "../sparkles-core"}
bincode = "1.3.3"
log = { version = "0.4.22", default-features = false }
ringbuf = "0.4.4"
serde = { version = "1.0.210", features = ["derive"] }
thread-id = "4.2.2"
drop_guard = "0.3.0"

[dev-dependencies]
# for examples
simple_logger = "5.0.0"
# for puffin tests
puffin_http = "0.16.0"
puffin = { version = "0.19.0" }

sparkles-macro = {path = "../sparkles-macro"}

[features]
default = []
accurate-events-x86 = ["sparkles-core/accurate-events-x86"]
