[package]
name = "sparkles"
description = "Capture execution flow of your Rust application with CPU cycle precision!"
version = "0.1.4"
edition = "2021"
license = "MIT"
repository = "https://github.com/skibon02/sparkles"
readme = "../README.md"

[dependencies]
sparkles-core = {version = "0.1.2", path = "../sparkles-core"}
bincode = "1.3.3"
serde = { version = "1.0.210", features = ["derive"] }
log = { version = "0.4.22", default-features = false }
ringbuf = "0.4.4"
drop_guard = "0.3.0"
thread-id = { version = "4.2.2" }
chrono = "0.4.38"

[dev-dependencies]
# for examples
simple_logger = "5.0.0"
# for puffin tests
puffin_http = "0.16.0"
puffin = { version = "0.19.0" }
tracing = "0.1.40"
tracing-perfetto = "0.1.1"
tracing-subscriber = "0.3.18"
anyhow = "1.0.88"


sparkles-macro = {path = "../sparkles-macro"}

[features]
default = ["self-tracing"]
accurate-timestamps-x86 = ["sparkles-core/accurate-timestamps-x86"]
self-tracing = []